static timer funtion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     
 
 
-
+    <section style="margin-top: 5rem;" class="timer-watch">
+       
+              <h1>Timer</h1>
+              <div class="timer-watch-container">
+                  <div id="hour-stop" class="container">0</div>
+              <div id="minutes-stop" class="container">0</div>
+              <div id="second-stop" class="container">0</div>
+              </div>
+          </section>
 
 
 <script src="logic/logic.js"></script>
